--- a/styles.css
+++ b/styles.css
@@ -365,16 +365,6 @@
   h1 {
     font-size: 36px;
   }
-
-  @media (max-width: 680px) {
-    .container {
-      flex-direction: column;
-    }
-
-    .right-top {
-      padding-top: 25px;
-    }
-}
   
   /** Logo **/
   .cats {
@@ -387,7 +377,6 @@
   /** Master Container **/
   .container {
     display: flex;
-    min-height: 100vh;
   }
   
   .left-column {
@@ -540,4 +529,20 @@ input:focus + label {
 
 ::-moz-placeholder {
   opacity: 0;
+}
+
+@media screen and (max-width: 700px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .right-top {
+    padding-top: 25px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .container {
+    min-width: 500px;
+  }
 }
